@@ -1,5 +1,8 @@
 11 July 2007
 
+* Add %[mail_rfc822date] which contains the mail date and time (or current date
+  and time if invalid) in RFC822 format and %[rfc822date] which is the same for
+  the current date/time. I probably need to stop adding tags now $() works.
 * Additional example from Giorgio Lando (examples/g-lando.conf).
 * Add two-digit year (year2/mail_year2) and hostname tags.
 * Simplify fetching: line counting and body detection is now done globally for
@@ -432,4 +435,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.108 2007-07-11 18:02:18 nicm Exp $
+$Id: CHANGES,v 1.109 2007-07-11 18:22:09 nicm Exp $
